--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
+        "jquery-ui": "^1.12.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
+        "stylus": "^0.54.7",
+        "stylus-loader": "^3.0.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     }
